# Kknd_Root_Detector

./: README.md  gradle.properties  settings.gradle.kts
.github/workflows/: ci_build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_checks.cpp  native_root_checks.cpp
app/src/main/java/com/juanma0511/rootdetector/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/juanma0511/rootdetector/detector/: DetectorTrust.kt  GetPropCatalog.kt  HwSecurityDetector.kt  IntegrityChecker.kt  KeyAttestationChecker.kt  MountNamespaceDetector.kt  NativeChecks.kt  OverlayFSDetector.kt  RootDetector.kt  ZygiskDetector.kt
app/src/main/java/com/juanma0511/rootdetector/model/: DetectionResult.kt  HwSecurityModel.kt
app/src/main/java/com/juanma0511/rootdetector/ui/: HwSecurityScreen.kt  RootDetectorScreen.kt  SettingsScreen.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
